tests/baselines/reference/typeFromPropertyAssignment17.errors.txt
tests/cases/conformance/salsa/use.js(3,8): error TS2554: Expected 1 arguments, but got 0.


==== tests/cases/conformance/salsa/use.js (1 errors) ====
    /// <reference path='./types.d.ts'/>
    var mini = require('./minimatch')
    mini.M.defaults()
           ~~~~~~~~~~
!!! error TS2554: Expected 1 arguments, but got 0.
!!! related TS6210 /.src/tests/cases/conformance/salsa/minimatch.js:10:24: An argument for 'def' was not provided.
    var m = new mini.M()
    m.m()
    mini.filter()
    
==== tests/cases/conformance/salsa/types.d.ts (0 errors) ====
    declare var require: any;
    declare var module: any;
==== tests/cases/conformance/salsa/minimatch.js (0 errors) ====
    /// <reference path='./types.d.ts'/>
    module.exports = minimatch
    minimatch.M = M
    minimatch.filter = filter
    function filter() {
        return minimatch()
    }
    function minimatch() {
    }
    M.defaults = function (def) {
        return def
    }
    M.prototype.m = function () {
    }
    function M() {
    }
    